mp4m.org 1.2.1 - Added screenshots for 0.5.0.3 - Misc modifications on text
git-svn-id: http://hamster-svn/svn/repos/base@169 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -88,5 +88,5 @@
     <li>FLAC</li>
     <li>OGG</li>
     <li>WAV</li>
-    <li>and more</li>
+    <li>More will be added soon (APE, WAVPACK, etc.)</li>
 </ul>
