--- a/mp4m.org/trunk/mp4m.org/Views/Root/Screenshots.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Screenshots.cshtml
@@ -17,7 +17,16 @@
         });
     });
 </script>
-<h3>Version 0.4.4.9</h3>
+<h3>Version 0.5.0.3&nbsp;&nbsp;<span style="font-size: small;">[2011-12-21]</span></h3>
+<div id="screenshots_0.5.0.3">    
+	<a rel="group_0_5_0_3" href="/Images/screenshots/0.5.0.3/splash.png" title="MPfm Splash screen"><img alt="" src="/Images/screenshots/0.5.0.3/splash_t.png" /></a>
+    <a rel="group_0_5_0_3" href="/Images/screenshots/0.5.0.3/main.png" title="MPfm Main window"><img alt="" src="/Images/screenshots/0.5.0.3/main_t.png" /></a>
+    <a rel="group_0_5_0_3" href="/Images/screenshots/0.5.0.3/playlist.png" title="MPfm Playlist window"><img alt="" src="/Images/screenshots/0.5.0.3/playlist_t.png" /></a>
+    <a rel="group_0_5_0_3" href="/Images/screenshots/0.5.0.3/marker.png" title="MPfm Add/Edit Marker window"><img alt="" src="/Images/screenshots/0.5.0.3/marker_t.png" /></a>
+    <a rel="group_0_5_0_3" href="/Images/screenshots/0.5.0.3/loop.png" title="MPfm Add/Edit Loop window"><img alt="" src="/Images/screenshots/0.5.0.3/loop_t.png" /></a>
+    <a rel="group_0_5_0_3" href="/Images/screenshots/0.5.0.3/metadata.png" title="MPfm Edit Metadata window"><img alt="" src="/Images/screenshots/0.5.0.3/metadata_t.png" /></a>
+</div>
+<h3>Version 0.4.4.9&nbsp;&nbsp;<span style="font-size: small;">[2011-10-09]</span></h3>
 <div id="screenshots_0.4.4.9">    
 	<a rel="group_0_4_4_9" href="/Images/screenshots/0.4.4.9/splash.png" title="MPfm Splash screen"><img alt="" src="/Images/screenshots/0.4.4.9/splash_t.png" /></a>
     <a rel="group_0_4_4_9" href="/Images/screenshots/0.4.4.9/main.png" title="MPfm Main window"><img alt="" src="/Images/screenshots/0.4.4.9/main_t.png" /></a>
@@ -26,7 +35,7 @@
     <a rel="group_0_4_4_9" href="/Images/screenshots/0.4.4.9/playlist.png" title="MPfm Playlist window"><img alt="" src="/Images/screenshots/0.4.4.9/playlist_t.png" /></a>
     <a rel="group_0_4_4_9" href="/Images/screenshots/0.4.4.9/metadata.png" title="MPfm Edit Metadata window"><img alt="" src="/Images/screenshots/0.4.4.9/metadata_t.png" /></a>
 </div>
-<h3>Version 0.4.3.1</h3>
+<h3>Version 0.4.3.1&nbsp;&nbsp;<span style="font-size: small;">[2011-04-16]</span></h3>
 <div id="screenshots_0.4.3.1">    
 	<a rel="group_0_4_3_1" href="/Images/screenshots/0.4.3.1/screenshot_splash.png" title="MPfm Splash screen"><img alt="" src="/Images/screenshots/0.4.3.1/screenshot_splash_t.png" /></a>
 	<a rel="group_0_4_3_1" href="/Images/screenshots/0.4.3.1/screenshot_wizard.png" title="MPfm First run wizard"><img alt="" src="/Images/screenshots/0.4.3.1/screenshot_wizard_t.png" /></a>
