--- a/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
@@ -21,6 +21,9 @@
 <p>
     To view the issues, change log and roadmap of MPfm, click <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">here</a>.
 </p>
+<p>
+    <b>Note: The Mantis bug tracker is currently down. It will be available soon.</b>
+</p>
 <h3>Contact Developer</h3>
 <p>
     You can contact the developer, Yanick Castonguay, at the following email address: 
