mp4m.org 1.2.3 - Added Blog link to menu - Added Softpedia link to download page - Removed notice that Mantis is down.
git-svn-id: http://hamster-svn/svn/repos/base@226 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
@@ -31,6 +31,9 @@
     To download the latest version directly from <b>Sourceforge.net</b>, click <a href="http://sourceforge.net/projects/mp4m/files/latest/download" title="Download latest version MPfm">here</a>.
 </p>
 <p>
+    <b>Softpedia</b> also offers a <a href="http://www.softpedia.com/get/Multimedia/Audio/Audio-Players/MPfm.shtml" title="Softpedia MPfm Download Page">download page</a> for MPfm, but the version might be slightly older.
+</p>
+<p>
     You can also download any archived version from the
     <a href="http://sourceforge.net/projects/mp4m/" title="MPfm Sourceforge.net Home Page">Sourceforge.net MPfm project page</a>.
 </p>
