--- a/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
@@ -10,19 +10,12 @@
     Documentation will be added to MPfm in the near future.
 </p>
 <h3>Bugs and Feature Request</h3>
-<p>
-    There is no commercial support for this application. However, you can use the MPfm bug tracker 
-    (based on MantisBT) to report a bug or request a feature to be added in a future version.
-</p>
-<p>
+@*<p>
     To report a new bug, you will have to <a href="http://mp4m.org/mantis/signup_page.php" title="MPfm Bug Tracker Signup">create a new user</a> 
     or <a href="http://mp4m.org/mantis/login_page.php" title="MPfm Bug Tracker Login">login using your existing credientials</a>.
-</p>
+</p>*@
 <p>
-    To view the issues, change log and roadmap of MPfm, click <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">here</a>.
-</p>
-<p>
-    <b>Note: The Mantis bug tracker is currently down. It will be available soon.</b>
+    To view the issues, upcoming features, change log and roadmap of MPfm, click <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">here</a>.
 </p>
 <h3>Contact Developer</h3>
 <p>
