--- a/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
@@ -42,7 +42,8 @@
                 <a href="/download">Download</a>
                 <a href="/license">License</a>
                 <a href="/developers">Developers</a>
-                <a href="/support">Support</a>                                
+                <a href="/support">Support</a>                            
+                <a href="/blog">Blog</a>
             </div>
             <div id="header_bottomtile">
                 <div class="facebook">                    
@@ -74,7 +75,7 @@
                 FamFamFam icons are © 2011 Mark James.
             </div>
             <div id="footer_supersmalltext">
-                [Version 1.2.1.0 <span class="footerSeparator">//</span> 2011-12-20]
+                [Version 1.2.3.0 <span class="footerSeparator">//</span> 2011-12-29]
             </div>
         </div>
     </div>
