mp4m.org 1.2.4.0 - Changed text on the index page (better wording) - Changed text on the support page (better wording) - Added blog link to Developers page - Added playlist formats to Features page
git-svn-id: http://hamster-svn/svn/repos/base@241 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Developers.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Developers.cshtml
@@ -81,3 +81,7 @@
     You <b>must</b> repackage the MPfm license including all its dependencies with your application, and add the copyright notices as stated in the
     <a href="/license" title="MPfm License">MPfm license</a>. You <b>must</b> release any modified MPfm source code with your application.
 </p>
+<h3>MPfm Blog</h3>
+<p>
+    If you want to know more about the development of MPfm, or keep in touch with the developers, you can read the <a href="/blog" title="MPfm Blog">MPfm Blog</a>.
+</p>
