--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -88,5 +88,16 @@
     <li>FLAC</li>
     <li>OGG</li>
     <li>WAV</li>
-    <li>More will be added soon (APE, WAVPACK, etc.)</li>
+    <li>APE</li>
+    <li>WAVPACK</li>
+    <li>More will be added soon (MPC, OFR, etc.)</li>
+</ul>
+<h3>Supported Playlist Formats</h3>
+<p>
+    MPfm supports the following playlist formats:
+</p>
+<ul class="code">        
+    <li>M3U/M3U8</li>
+    <li>PLS</li>
+    <li><a href="http://www.xspf.org/" title="XSPF Home Page">XSPF</a></li>    
 </ul>
