--- a/mp4m.org/trunk/mp4m.org/Views/Root/Index.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Index.cshtml
@@ -13,11 +13,10 @@
     </script> 
     <h2><b>Discover</b> a new way to listen to your music library.</h2>
     <p class="p_medium">    
-        <b>MPfm</b> may look like just another music player on the surface.
-        However, if you are a musician, this player offers interesting features 
-        such as time shifting, loops and markers to 
-        help you pick songs by ear. For more information about the MPfm features, 
-        consult this <a href="/features" title="MPfm Features Page">page</a>.    
+        <b>MPfm</b> is a music player made specifically for musicians. It may look like any other music player, but
+        if you are a musician, it offers interesting features 
+        such as <b>time shifting</b>, <b>loops</b> and <b>markers</b> to 
+        help you pick songs by ear. Click <a href="/features" title="MPfm Features Page">here</a> to know more about MPfm.
     </p>
     <div id="slider"> 
     <ul id="sliderContent"> 
@@ -46,15 +45,17 @@
     </div>    
     <p class="p_medium">
         <img src="/Images/gplv3-88x31.png" class="floatRight" width="88" height="31" alt="GPLv3 Logo" />
-        MPfm is <b>freeware</b> and <b>open source</b>; the application is released under 
-        the <a href="http://www.gnu.org/licenses/gpl.html" title="GPLv3 License">GPLv3 license</a>. 
-        This means that the community can make modifications to MPfm, but they will always be <b>free</b>.
-        For more information about the MPfm license, consult this <a href="/license" title="MPfm License Page">page</a>.
+        MPfm is <b>freeware</b>, <b>open source</b> and is released under 
+        the <b>GPLv3 license</b>. This means MPfm can be modified by the community and will always stay <b>free</b>.
+        For more information, check the <a href="/license" title="MPfm License Page">MPfm License</a>.
     </p>
     <p class="p_medium">
         <img src="/Images/mantis_logo_button.gif" class="floatRight" width="88" height="35" alt="MantisBT Logo" />
-        MPfm is also currently in <b>beta</b>. Check the <a href="http://www.mp4m.org/mantis/roadmap_page.php" title="MPfm Roadmap">roadmap</a> 
+        MPfm is currently in <b>beta</b>. Check the <a href="http://www.mp4m.org/mantis/roadmap_page.php" title="MPfm Roadmap">roadmap</a> 
         on the Mantis bug tracker to see what are the next features to be implemented.
+    </p>
+    <p class="p_medium">
+        You can get the latest news about MPfm by liking our <a href="http://www.facebook.com/pages/MPfm-Music-Player-for-Musicians/162671573835061" title="MPfm Facebook Page">Facebook</a> page, following our <a href="http://www.twitter.com/ycastonguay" title="MPfm Twitter Account Page">Twitter</a> account, or by reading our <a href="/blog" title="MPfm Blog">blog</a>.
     </p>
     <p class="p_medium">
         To download the latest version of MPfm, go to the <a href="/download" title="Download MPfm Page">Download</a> page.
