--- a/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
@@ -15,10 +15,13 @@
     or <a href="http://mp4m.org/mantis/login_page.php" title="MPfm Bug Tracker Login">login using your existing credientials</a>.
 </p>*@
 <p>
-    To view the issues, upcoming features, change log and roadmap of MPfm, click <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">here</a>.
+    To view the issues, upcoming features, change log and roadmap of MPfm, check the <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">bug tracker</a>.
+</p>
+<p>
+    To submit bug reports, or to make any suggestions, please contact the developer with the information below. A forum will be added soon.
 </p>
 <h3>Contact Developer</h3>
 <p>
-    You can contact the developer, Yanick Castonguay, at the following email address: 
+    You can contact the developer, <b>Yanick Castonguay</b>, at the following email address: 
     yanick.castonguay (AT) gmail (DOT) com.
 </p>
