mp4m.org 1.2.5.0 - Changed support text, now added the MPfm Support Mantis project.
git-svn-id: http://hamster-svn/svn/repos/base@243 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
@@ -10,18 +10,20 @@
     Documentation will be added to MPfm in the near future.
 </p>
 <h3>Bugs and Feature Request</h3>
-@*<p>
-    To report a new bug, you will have to <a href="http://mp4m.org/mantis/signup_page.php" title="MPfm Bug Tracker Signup">create a new user</a> 
-    or <a href="http://mp4m.org/mantis/login_page.php" title="MPfm Bug Tracker Login">login using your existing credientials</a>.
-</p>*@
 <p>
-    To view the issues, upcoming features, change log and roadmap of MPfm, check the <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">bug tracker</a>.
+    To view the issues, upcoming features, change log and roadmap of MPfm, check the <a href="http://www.mp4m.org/mantis" title="MPfm Bug Tracker">Mantis bug tracker</a>.
 </p>
 <p>
-    To submit bug reports, or to make any suggestions, please contact the developer with the information below. A forum will be added soon.
+    To report a new bug, you will have to <a href="http://mp4m.org/mantis/signup_page.php" title="MPfm Bug Tracker Signup">create a new user</a> 
+    or <a href="http://mp4m.org/mantis/login_page.php" title="MPfm Bug Tracker Login">login using your existing credientials</a>. 
+</p>
+<p>    
+    Users can submit new issues in the <b>MPfm/Support</b> project. The developer will then try to reproduce the bug and add a definitive issue into the
+    into the <b>MPfm</b> project. All related issues will be linked. You can use Mantis notifications to get updates on your submitted issues or on
+    issues you are interested in.
 </p>
 <h3>Contact Developer</h3>
 <p>
     You can contact the developer, <b>Yanick Castonguay</b>, at the following email address: 
-    yanick.castonguay (AT) gmail (DOT) com.
+    <a href="mailto:ycastonguay@mp4m.org">ycastonguay@mp4m.org</a>.
 </p>
