--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -13,7 +13,7 @@
 </p>
 <ul class="code">
     <li><b>Filter Library by Sound Format</b><br />
-    Most audio players support a wide variety of sound formats (FLAC, MP3, OGG, etc.). However, none let you filter your library
+    Most audio players support a wide variety of sound formats (see list below). However, none let you filter your library
     by sound format as easily as MPfm; just use the "Filter by Sound Format" combo box.
     </li>
     <li><b>Time Shifting</b><br />
@@ -84,20 +84,21 @@
     MPfm supports the following sound formats:
 </p>
 <ul class="code">        
-    <li>MP3</li>
-    <li>FLAC</li>
-    <li>OGG</li>
-    <li>WAV</li>
-    <li>APE</li>
-    <li>WAVPACK</li>
-    <li>More will be added soon (MPC, OFR, etc.)</li>
+    <li><a href="http://en.wikipedia.org/wiki/MP3" title="MP3 Wikipedia Page">MP3</a></li>
+    <li><a href="http://flac.sourceforge.net/" title="FLAC Home Page">FLAC</a></li>
+    <li><a href="http://www.vorbis.com/faq/" title="OGG Vorbis FAQ Page">OGG (Vorbis)</a></li>
+    <li><a href="http://en.wikipedia.org/wiki/WAV" title="WAV Wikipedia Page">WAV</a></li>
+    <li><a href="http://www.monkeysaudio.com/" title="APE (Monkey's Audio) Home Page">APE (Monkey's Audio)</a></li>
+    <li><a href="http://www.wavpack.com/" title="WavPack Home Page">WV (WavPack)</a></li>
+    <li><a href="http://www.musepack.net/" title="MusePack Home Page">MPC (MusePack)</a></li>
+    <li>More will be added soon (OFR, TTA, ALAC, M4A, WMA, etc.)</li>
 </ul>
 <h3>Supported Playlist Formats</h3>
 <p>
     MPfm supports the following playlist formats:
 </p>
-<ul class="code">        
-    <li>M3U/M3U8</li>
-    <li>PLS</li>
+<ul class="code">
+    <li><a href="http://en.wikipedia.org/wiki/M3U" title="M3U Wikipedia Page">M3U/M3U8</a></li>    
+    <li><a href="http://en.wikipedia.org/wiki/PLS" title="PLS Wikipedia Page">PLS</a></li>    
     <li><a href="http://www.xspf.org/" title="XSPF Home Page">XSPF</a></li>    
 </ul>
