--- a/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Support.cshtml
@@ -5,9 +5,17 @@
 }
 
 <h2>Support</h2>
-<h3>Documentation</h3>
+<h3>User Guide</h3>
 <p>
-    Documentation will be added to MPfm in the near future.
+    A user guide for MPfm is currently in the works and will be released in the future.
+</p>
+<h3>Developer Documentation</h3>
+<p>
+    The developer documentation is part of the Source Code package, available on the 
+    <a href="http://sourceforge.net/projects/mp4m" title="MPfm SourceForge Home Page">MPfm SourceForge Home Page</a>. 
+</p>
+<p>
+    You can also consult the online documentation <a href="/docs" title="MPfm Online Developer Documentation" >here</a>.
 </p>
 <h3>Bugs and Feature Request</h3>
 <p>
