--- a/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
@@ -68,14 +68,14 @@
             @RenderBody()
         </div>
         <div id="footer">
-            MPfm: Music Player for Musicians is © 2011 Yanick Castonguay and is released under the GPLv3 license.
+            MPfm: Music Player for Musicians is © 2011-2012 Yanick Castonguay and is released under the GPLv3 license.
             <div id="footer_smalltext">                                            
-                The BASS audio library is © 1999-2011 Un4seen Developments. <span class="footerSeparator">//</span>
-                The BASS.NET audio library is © 2005-2011 radio42. <span class="footerSeparator">//</span>
-                FamFamFam icons are © 2011 Mark James.
+                The BASS audio library is © 1999-2012 Un4seen Developments. <span class="footerSeparator">//</span>
+                The BASS.NET audio library is © 2005-2012 radio42. <span class="footerSeparator">//</span>
+                FamFamFam icons are © 2009-2012 Mark James.
             </div>
             <div id="footer_supersmalltext">
-                [Version 1.2.5.0 <span class="footerSeparator">//</span> 2012-01-07]
+                [Version 1.2.6.0 <span class="footerSeparator">//</span> 2012-01-19]
             </div>
         </div>
     </div>
