Added WMA to list of supported sound formats
git-svn-id: http://hamster-svn/svn/repos/base@312 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -85,6 +85,7 @@
 </p>
 <ul class="code">        
     <li><a href="http://en.wikipedia.org/wiki/MP3" title="MP3 Wikipedia Page">MP3</a></li>
+    <li><a href="http://en.wikipedia.org/wiki/Windows_Media_Audio" title="WMA Wikipedia Page">WMA</a></li>
     <li><a href="http://flac.sourceforge.net/" title="FLAC Home Page">FLAC</a></li>
     <li><a href="http://www.vorbis.com/faq/" title="OGG Vorbis FAQ Page">OGG (Vorbis)</a></li>
     <li><a href="http://en.wikipedia.org/wiki/WAV" title="WAV Wikipedia Page">WAV</a></li>
