Corrected supported sound formats in Features page.
git-svn-id: http://hamster-svn/svn/repos/base@313 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -92,7 +92,7 @@
     <li><a href="http://www.monkeysaudio.com/" title="APE (Monkey's Audio) Home Page">APE (Monkey's Audio)</a></li>
     <li><a href="http://www.wavpack.com/" title="WavPack Home Page">WV (WavPack)</a></li>
     <li><a href="http://www.musepack.net/" title="MusePack Home Page">MPC (MusePack)</a></li>
-    <li>More will be added soon (OFR, TTA, ALAC, M4A, WMA, etc.)</li>
+    <li>More will be added soon (OFR, TTA, AAC/M4A/MP4 + ALAC)</li>
 </ul>
 <h3>Supported Playlist Formats</h3>
 <p>
